--- a/public/config.json
+++ b/public/config.json
@@ -394,8 +394,8 @@
             "link": "/projects"
           },
           {
-            "name": "Blog",
-            "link": "/blog"
+            "name": "Blogs",
+            "link": "/blogs"
           }
         ]
       }
