--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "katex": "^0.16.20",
     "lodash": "^4.17.21",
     "markmap": "^0.6.1",
+    "masonry-layout": "^4.2.2",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "pyodide": "^0.27.1",
@@ -41,6 +42,7 @@
     "remark-math": "^6.0.0",
     "remark-toc": "^9.0.0",
     "slick-carousel": "^1.8.1",
+    "unist-util-visit": "^5.0.0",
     "video-embed": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
