--- a/public/blogs/blog_config.json
+++ b/public/blogs/blog_config.json
@@ -1,143 +1,71 @@
 [
   {
     "id": 0,
-    "abstract": "Creating your own blog can be a fun and rewarding project, and with modern web technologies, it's easier than ever to build a simple yet highly customizable blog that fits your needs. Whether you're a beginner or an experienced developer, this guide will walk you through the steps to set up a blog using popular tools like React, Markdown, and Bootstrap. You'll learn how to structure your blog's content, create dynamic pages, and apply custom styles to make it truly your own. By the end, you'll have a fully functional blog that is both easy to maintain and flexible enough to grow with your content.",
-    "title": "\uD83C\uDF89 Easily create your own simple yet highly customizable blog",
-    "slug": "understanding-single-cell-sequencing",
-    "author": "MMeowhite",
+    "abstract": "The first lesson to introduce python syntax and MNIST dataset used in deep learning example. It includes three parts: Python learning Path, introduction to Python and introduction to MNIST dataset",
+    "title": "\uD83C\uDF89 Introduction to Python and MNIST dataset",
+    "slug": "introduction-to-python-and-mnist-dataset",
+    "authorWeb": "MMeowhite",
     "authorImg": "/images/avatar_init.jpg",
-    "location": "Palo Alto, United States",
-    "resource": "/blogs/resources/2025/01/single_cell.md",
-    "featuredImage": "/blogs/resources/2025/01/avatar.png",
-    "readingTime": "7min",
-    "publishDate": "Oct 27, 2024",
-    "updatedTime": "Dec 21, 2024",
-    "category": "Genomics",
+    "publishLocation": "Chengdu, China",
+    "resource": "/blogs/resources/2025/02/Introduction_to_AI.md",
+    "featuredImage": "/blogs/resources/2025/02/img.jpeg",
+    "readingTime": "40min",
+    "publishDate": "Feb 18, 2025",
+    "updatedTime": "Feb 18, 2025",
+    "category": "AI",
     "tags": [
   {
-    "name": "Single-Cell Sequencing",
-    "link": "single-cell-sequencing"
+    "name": "AI",
+    "link": "ai"
   },
   {
-    "name": "Genomics",
-    "link": "genomics"
+    "name": "Python",
+    "link": "python"
   }
   ],
     "isFeatured": false,
-    "references": [
-      {"1": "https://www.technologynetworks.com/genomics/articles/understanding-single-cell-sequencing-how-it-works-and-its-applications-357578"},
-      {"2": "https://web.genewiz.com/single-cell-faq"},
-      {"3": "https://www.nature.com/articles/s41596-020-00409-w"},
-      {"4": "https://pmc.ncbi.nlm.nih.gov/articles/PMC8964935/"},
-      {"5": "https://pmc.ncbi.nlm.nih.gov/articles/PMC10417635/"},
-      {"6": "https://help.geneiousbiologics.com/hc/en-us/articles/4781289585300-Understanding-Single-Cell-technologies-Barcodes-and-UMIs"}
-    ]
-  },
-  {
-    "id": 1,
-    "abstract": "Creating your own blog can be a fun and rewarding project, and with modern web technologies, it's easier than ever to build a simple yet highly customizable blog that fits your needs. Whether you're a beginner or an experienced developer, this guide will walk you through the steps to set up a blog using popular tools like React, Markdown, and Bootstrap. You'll learn how to structure your blog's content, create dynamic pages, and apply custom styles to make it truly your own. By the end, you'll have a fully functional blog that is both easy to maintain and flexible enough to grow with your content.",
-    "title": "\uD83C\uDF89 Easily create your own simple yet highly customizable blog",
-    "slug": "understanding-sequencing-2",
-    "author": "MMeowhite",
-    "location": "Palo Alto, United States",
-    "resource": "/blogs/resources/2025/01/single_cell.md",
-    "featuredImage": "/blogs/resources/2025/01/avatar.png",
-    "readingTime": "7min",
-    "publishDate": "Oct 27, 2024",
-    "updatedTime": "Dec 21, 2024",
-    "category": "Genomics",
-    "tags": [
+    "authorsContent": [
       {
-        "name": "Single-Cell Sequencing",
-        "link": "single-cell-sequencing"
+        "name": "MMeowhite",
+        "img": "/images/avatar_init.jpg",
+        "website": "https://www.miaopeng.info/",
+        "career": "Bioscience Student",
+        "organization": "Sichuan University",
+        "link": [
+      {
+        "type": "email",
+        "icon": "/images/link_icon/gmail.svg",
+        "link": "mailto:miaopeng@stu.scu.edu.cn"
       },
       {
-        "name": "Genomics",
-        "link": "genomics"
+        "type": "github",
+        "icon": "/images/link_icon/github.svg",
+        "link": "https://github.com/MMeowhite"
+      },
+      {
+        "type": "google_scholar",
+        "icon": "/images/link_icon/googlescholar.svg",
+        "link": "https://scholar.google.com/citations?user=Y5lz1jMAAAAJ&hl=en"
+      },
+      {
+        "type": "linkedin",
+        "icon": "/images/link_icon/linkedin.svg",
+        "link": "https://www.linkedin.com/in/peng-miao-89324a341/"
+      },
+      {
+        "type": "youtube",
+        "icon": "/images/link_icon/youtube.svg",
+        "link": "https://www.youtube.com/@pengmiao-bmm"
+      }
+        ]
       }
     ],
-    "isFeatured": false,
     "references": [
-      {"1": "https://www.technologynetworks.com/genomics/articles/understanding-single-cell-sequencing-how-it-works-and-its-applications-357578"},
-      {"2": "https://web.genewiz.com/single-cell-faq"},
-      {"3": "https://www.nature.com/articles/s41596-020-00409-w"},
-      {"4": "https://pmc.ncbi.nlm.nih.gov/articles/PMC8964935/"},
-      {"5": "https://pmc.ncbi.nlm.nih.gov/articles/PMC10417635/"},
-      {"6": "https://help.geneiousbiologics.com/hc/en-us/articles/4781289585300-Understanding-Single-Cell-technologies-Barcodes-and-UMIs"}
-    ]
-  },
-  {
-    "id": 3,
-    "abstract": "Creating your own blog can be a fun and rewarding project, and with modern web technologies, it's easier than ever to build a simple yet highly customizable blog that fits your needs. Whether you're a beginner or an experienced developer, this guide will walk you through the steps to set up a blog using popular tools like React, Markdown, and Bootstrap. You'll learn how to structure your blog's content, create dynamic pages, and apply custom styles to make it truly your own. By the end, you'll have a fully functional blog that is both easy to maintain and flexible enough to grow with your content.",
-    "title": "\uD83C\uDF89 Easily create your own simple yet highly customizable blog",
-    "slug": "understanding-single-cell-sequencing-3",
-    "author": "MMeowhite",
-    "location": "Palo Alto, United States",
-    "resource": "/blogs/resources/2025/01/single_cell.md",
-    "featuredImage": "/blogs/resources/2025/01/avatar.png",
-    "readingTime": "7min",
-    "publishDate": "Oct 27, 2024",
-    "updatedTime": "Dec 21, 2024",
-    "category": "Genomics",
-    "tags": [
-      {
-        "name": "Single-Cell Sequencing",
-        "link": "single-cell-sequencing"
-      },
-      {
-        "name": "Genomics",
-        "link": "genomics"
-      },
-      {
-        "name": "RNA-bulk",
-        "link": "rna-bulk"
-      }
-    ],
-    "isFeatured": false,
-    "references": [
-      {"1": "https://www.technologynetworks.com/genomics/articles/understanding-single-cell-sequencing-how-it-works-and-its-applications-357578"},
-      {"2": "https://web.genewiz.com/single-cell-faq"},
-      {"3": "https://www.nature.com/articles/s41596-020-00409-w"},
-      {"4": "https://pmc.ncbi.nlm.nih.gov/articles/PMC8964935/"},
-      {"5": "https://pmc.ncbi.nlm.nih.gov/articles/PMC10417635/"},
-      {"6": "https://help.geneiousbiologics.com/hc/en-us/articles/4781289585300-Understanding-Single-Cell-technologies-Barcodes-and-UMIs"}
-    ]
-  },
-  {
-    "id": 4,
-    "abstract": "Creating your own blog can be a fun and rewarding project, and with modern web technologies, it's easier than ever to build a simple yet highly customizable blog that fits your needs. Whether you're a beginner or an experienced developer, this guide will walk you through the steps to set up a blog using popular tools like React, Markdown, and Bootstrap. You'll learn how to structure your blog's content, create dynamic pages, and apply custom styles to make it truly your own. By the end, you'll have a fully functional blog that is both easy to maintain and flexible enough to grow with your content.",
-    "title": "\uD83C\uDF89 Easily create your own simple yet highly customizable blog",
-    "slug": "understanding-bulk-rna-sequencing-4",
-    "author": "MMeowhite",
-    "location": "Palo Alto, United States",
-    "resource": "/blogs/resources/2025/01/single_cell.md",
-    "featuredImage": "/blogs/resources/2025/01/avatar.png",
-    "readingTime": "7min",
-    "publishDate": "Oct 27, 2024",
-    "updatedTime": "Dec 21, 2024",
-    "category": "Genomics",
-    "tags": [
-      {
-        "name": "Single-Cell Sequencing",
-        "link": "/tags/single-cell-sequencing"
-      },
-      {
-        "name": "Genomics",
-        "link": "/tags/genomics"
-      },
-      {
-        "name": "Bulk-RNA Sequencing",
-        "link": "/tags/bulk-rna-sequencing"
-      }
-    ],
-    "isFeatured": false,
-    "references": [
-      {"1": "https://www.technologynetworks.com/genomics/articles/understanding-single-cell-sequencing-how-it-works-and-its-applications-357578"},
-      {"2": "https://web.genewiz.com/single-cell-faq"},
-      {"3": "https://www.nature.com/articles/s41596-020-00409-w"},
-      {"4": "https://pmc.ncbi.nlm.nih.gov/articles/PMC8964935/"},
-      {"5": "https://pmc.ncbi.nlm.nih.gov/articles/PMC10417635/"},
-      {"6": "https://help.geneiousbiologics.com/hc/en-us/articles/4781289585300-Understanding-Single-Cell-technologies-Barcodes-and-UMIs"}
+      {"1": "https://en.wikipedia.org/wiki/Deep_learning"},
+      {"2": "https://stanford-cs221.github.io/autumn2024/"},
+      {"3": "https://cs231n.github.io/python-numpy-tutorial/"},
+      {"4": "https://www.clicdata.com/blog/ai-ml-data-science-deep-learning/#artificial-intelligence-ai"},
+      {"5": "https://en.wikipedia.org/wiki/MNIST_database"}
     ]
   }
 ]
