--- a/public/blogs/blog_config.json
+++ b/public/blogs/blog_config.json
@@ -77,7 +77,7 @@
     "authorImg": "/images/avatar_init.jpg",
     "publishLocation": "Chengdu, China",
     "resource": "/blogs/resources/2025/02/β2_Adrenergic_Neurotrophin_Feedforward_Loop_Promotes_Pancreatic_Cancer.md",
-    "featuredImage": "/blogs/resources/2025/02/img.jpeg",
+    "featuredImage": "/blogs/resources/2025/02/assets/cancer_neuroscience_cover.png",
     "readingTime": "1h",
     "publishDate": "Feb 20, 2025",
     "updatedTime": "Feb 20, 2025",
